--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
           <a href="/">WebStudio</a>
           <ul>
             <li>
-              <a href="/index.html">Студия</a>
+              <a href="index.html">Студия</a>
             </li>
             <li>
               <a href="/">Портфолио</a>
