--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <header>      
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="/">Студия</a>
+            <a href="./index.html">Студия</a>
           </li>
           <li>
-            <a href="portfolio.html">Портфолио</a>
+            <a href="./portfolio.html">Портфолио</a>
           </li>
           <li>
             <a href="#">Контакты</a>
