--- a/portfolio.html
+++ b/portfolio.html
@@ -9,13 +9,13 @@
 <body>
     <header>      
         <nav>
-          <a href="/">WebStudio</a>
+          <a href="./index.html">WebStudio</a>
           <ul>
             <li>
-              <a href="index.html">Студия</a>
+              <a href="./index.html">Студия</a>
             </li>
             <li>
-              <a href="/">Портфолио</a>
+              <a href="./portfolio.html">Портфолио</a>
             </li>
             <li>
               <a href="#">Контакты</a>
@@ -53,7 +53,7 @@
             <ul>
                 <li>
                     <img 
-                    src="/images/portfolio/portf1.jpg" 
+                    src="./images/portfolio/portf1.jpg" 
                     alt="Веб-сайт"
                     width="370">
                     <h3>Технокряк</h3>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <img 
-                    src="/images/portfolio/portf2.jpg" 
+                    src="./images/portfolio/portf2.jpg" 
                     alt="Постер"
                     width="370">
                     <h3>Постер New Orlean vs Golden Star</h3>
@@ -69,7 +69,7 @@
                 </li>
                 <li>
                     <img 
-                    src="/images/portfolio/portf3.jpg" 
+                    src="./images/portfolio/portf3.jpg" 
                     alt="Seafood"
                     width="370">
                     <h3>Ресторан Seafood</h3>
@@ -77,7 +77,7 @@
                 </li>
                 <li>
                     <img 
-                    src="/images/portfolio/portf4.jpg" 
+                    src="./images/portfolio/portf4.jpg" 
                     alt="Prime"
                     width="370">
                     <h3>Проект Prime</h3>
@@ -85,7 +85,7 @@
                 </li>
                 <li>
                     <img 
-                    src="/images/portfolio/portf5.jpg" 
+                    src="./images/portfolio/portf5.jpg" 
                     alt="Boxes"
                     width="370">
                     <h3>Проект Boxes</h3>
@@ -93,7 +93,7 @@
                 </li>
                 <li>
                     <img 
-                    src="/images/portfolio/portf6.jpg" 
+                    src="./images/portfolio/portf6.jpg" 
                     alt="Borders"
                     width="370">
                     <h3>Inspiration has no Borders</h3>
@@ -101,7 +101,7 @@
                 </li>
                 <li>
                     <img 
-                    src="/images/portfolio/portf7.jpg" 
+                    src="./images/portfolio/portf7.jpg" 
                     alt="Limited Edition"
                     width="370">
                     <h3>Издание Limited Edition</h3>
@@ -109,7 +109,7 @@
                 </li>
                 <li>
                     <img 
-                    src="/images/portfolio/portf8.jpg" 
+                    src="./images/portfolio/portf8.jpg" 
                     alt="LAB"
                     width="370">
                     <h3>Проект LAB</h3>
@@ -117,7 +117,7 @@
                 </li>
                 <li>
                     <img 
-                    src="/images/portfolio/portf9.jpg" 
+                    src="./images/portfolio/portf9.jpg" 
                     alt="Business"
                     width="370">
                     <h3>Growing Business</h3>
