--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </section>
     </main>
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>          
