--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
-    <link rel="preconnect" 
-    href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
-    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>      
+    <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a class="logo" href="./index.html"> <span class="logo-first">Web</span>Studio </a>
+        <ul class="nav-link">
           <li>
             <a href="./index.html">Студия</a>
           </li>
@@ -32,99 +34,70 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <main>      
+    <main>
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
-      </section>      
+      </section>
       <section>
         <h2>Наши ценности</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
             <h3>Пунктуальность</h3>
             <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
             <h3>Планирование</h3>
             <p>
-              Равным образом консультация с широким активом в значительной степени
-              обуславливает.
+              Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
             <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация плановых
-              заданий.
-            </p>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li>        
-            <img 
-              src="./images/product/box1.jpg"
-              alt="Створюємо сайти"
-              width="370" />
+          <li>
+            <img src="./images/product/box1.jpg" alt="Створюємо сайти" width="370" />
           </li>
           <li>
-            <img
-            src="./images/product/box2.jpg"
-            alt="Створюємо мобільні додатки"
-            width="370" />
+            <img src="./images/product/box2.jpg" alt="Створюємо мобільні додатки" width="370" />
           </li>
-           <li>
-            <img 
-            src="./images/product/box3.jpg" 
-            alt="Дизайн сайтів" 
-            width="370" />
-           </li> 
-        </ul>        
+          <li>
+            <img src="./images/product/box3.jpg" alt="Дизайн сайтів" width="370" />
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img 
-              src="./images/team/img.jpg" 
-              alt="Игорь Демьяненко" 
-              width="270" />
+            <img src="./images/team/img.jpg" alt="Игорь Демьяненко" width="270" />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img 
-              src="./images/team/img(1).jpg" 
-              alt="Ольга Репина" 
-              width="270" />
+            <img src="./images/team/img(1).jpg" alt="Ольга Репина" width="270" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img 
-              src="./images/team/img(2).jpg" 
-              alt="Николай Тарасов" 
-              width="270" />
+            <img src="./images/team/img(2).jpg" alt="Николай Тарасов" width="270" />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img 
-              src="./images/team/img(3).jpg" 
-              alt="Михаил Ермаков" 
-              width="270" />
+            <img src="./images/team/img(3).jpg" alt="Михаил Ермаков" width="270" />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
@@ -135,7 +108,7 @@
       <a href="./index.html">WebStudio</a>
       <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>          
+        <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
