--- a/portfolio.html
+++ b/portfolio.html
@@ -1,148 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
-    <link rel="preconnect" 
-    href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
-    rel="stylesheet">
-</head>
-<body>
-    <header>      
-        <nav>
-          <a href="./index.html">WebStudio</a>
-          <ul>
-            <li>
-              <a href="./index.html">Студия</a>
-            </li>
-            <li>
-              <a href="./portfolio.html">Портфолио</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <!-- header contact-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a href="./index.html">Студия</a>
+          </li>
+          <li>
+            <a href="./portfolio.html">Портфолио</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
         </ul>
+      </nav>
+      <!-- header contact-->
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
-        <section>
-            <div>
-                <h2>Розробка WEB продуктів</h2>
-                <ul>
-                    <li>
-                        <button type="button">Все</button>
-                    </li>
-                    <li>
-                        <button type="button">Веб-сайты</button>
-                    </li>
-                    <li>
-                        <button type="button">Приложения</button>
-                    </li>
-                    <li>
-                        <button type="button">Дизайн</button>
-                    </li>
-                    <li>
-                        <button type="button">Маркетинг</button>
-                    </li>
-                </ul>
-            </div>
-            <ul>
-                <li>
-                    <img 
-                    src="./images/portfolio/portf1.jpg" 
-                    alt="Веб-сайт"
-                    width="370">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
-                </li>
-                <li>
-                    <img 
-                    src="./images/portfolio/portf2.jpg" 
-                    alt="Постер"
-                    width="370">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
-                </li>
-                <li>
-                    <img 
-                    src="./images/portfolio/portf3.jpg" 
-                    alt="Seafood"
-                    width="370">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Приложение</p>
-                </li>
-                <li>
-                    <img 
-                    src="./images/portfolio/portf4.jpg" 
-                    alt="Prime"
-                    width="370">
-                    <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
-                </li>
-                <li>
-                    <img 
-                    src="./images/portfolio/portf5.jpg" 
-                    alt="Boxes"
-                    width="370">
-                    <h3>Проект Boxes</h3>
-                    <p>Приложение</p>
-                </li>
-                <li>
-                    <img 
-                    src="./images/portfolio/portf6.jpg" 
-                    alt="Borders"
-                    width="370">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
-                </li>
-                <li>
-                    <img 
-                    src="./images/portfolio/portf7.jpg" 
-                    alt="Limited Edition"
-                    width="370">
-                    <h3>Издание Limited Edition</h3>
-                    <p>Дизайн</p>
-                </li>
-                <li>
-                    <img 
-                    src="./images/portfolio/portf8.jpg" 
-                    alt="LAB"
-                    width="370">
-                    <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
-                </li>
-                <li>
-                    <img 
-                    src="./images/portfolio/portf9.jpg" 
-                    alt="Business"
-                    width="370">
-                    <h3>Growing Business</h3>
-                    <p>Приложение</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <address>
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
-          <ul>          
+      <section>
+        <div>
+          <h2>Розробка WEB продуктів</h2>
+          <ul>
             <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <button type="button">Все</button>
             </li>
             <li>
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
+              <button type="button">Веб-сайты</button>
+            </li>
+            <li>
+              <button type="button">Приложения</button>
+            </li>
+            <li>
+              <button type="button">Дизайн</button>
+            </li>
+            <li>
+              <button type="button">Маркетинг</button>
             </li>
           </ul>
-        </address> 
+        </div>
+        <ul>
+          <li>
+            <img src="./images/portfolio/portf1.jpg" alt="Веб-сайт" width="370" />
+            <h3>Технокряк</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portf2.jpg" alt="Постер" width="370" />
+            <h3>Постер New Orlean vs Golden Star</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portf3.jpg" alt="Seafood" width="370" />
+            <h3>Ресторан Seafood</h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portf4.jpg" alt="Prime" width="370" />
+            <h3>Проект Prime</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portf5.jpg" alt="Boxes" width="370" />
+            <h3>Проект Boxes</h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portf6.jpg" alt="Borders" width="370" />
+            <h3>Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portf7.jpg" alt="Limited Edition" width="370" />
+            <h3>Издание Limited Edition</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portf8.jpg" alt="LAB" width="370" />
+            <h3>Проект LAB</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portf9.jpg" alt="Business" width="370" />
+            <h3>Growing Business</h3>
+            <p>Приложение</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <address>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
-</body>
+  </body>
 </html>
