--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
+  <body class="page">
+    <header class="page-header">
       <nav>
         <a class="logo" href="./index.html"> <span class="logo-first">Web</span>Studio </a>
-        <ul class="nav-link">
+        <ul class="site-nav">
           <li>
             <a href="./index.html">Студия</a>
           </li>
@@ -29,43 +29,43 @@
         </ul>
       </nav>
       <!-- header contact-->
-      <ul>
+      <ul class="contact-nav">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
-      <section>
-        <h2>Наши ценности</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Наши ценности</h2>
+        <ul class="feature-list">
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="title">Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="title">Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img src="./images/product/box1.jpg" alt="Створюємо сайти" width="370" />
@@ -78,8 +78,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/team/img.jpg" alt="Игорь Демьяненко" width="270" />
