--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
   </head>
   <body class="page">
     <header class="page-header">
+      <!-- header nav -->
       <nav>
-        <a class="logo" href="./index.html"> <span class="logo-first">Web</span>Studio </a>
+        <a class="nav-logo" href="./index.html"> <span class="first-nav-logo">Web</span>Studio </a>
         <ul class="site-nav">
           <li>
-            <a href="./index.html">Студия</a>
+            <a href="./index.html" class="link current">Студия</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфолио</a>
+            <a href="./portfolio.html" class="link">Портфолио</a>
           </li>
           <li>
-            <a href="#">Контакты</a>
+            <a href="#" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -34,10 +35,11 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <!-- main -->
     <main>
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
       <section class="section">
         <h2 class="section-title">Наши ценности</h2>
@@ -80,33 +82,35 @@
       </section>
       <section class="section">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
+        <ul class="team-list">
           <li>
             <img src="./images/team/img.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="title">Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/team/img(1).jpg" alt="Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
+            <h3 class="title">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team/img(2).jpg" alt="Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
+            <h3 class="title">Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/team/img(3).jpg" alt="Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="title">Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html">
+        <span class="first-footer-logo">Web</span>Studio
+      </a>
+      <address class="adress-footer">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
           <li>
