--- a/portfolio.html
+++ b/portfolio.html
@@ -12,47 +12,48 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
+  <body class="page">
+    <header class="page-header">
+      <!-- header nav -->
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a class="nav-logo" href="./index.html"> <span class="first-nav-logo">Web</span>Studio </a>
+        <ul class="site-nav">
           <li>
-            <a href="./index.html">Студия</a>
+            <a href="./index.html" class="link">Студия</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфолио</a>
+            <a href="./portfolio.html" class="link current">Портфолио</a>
           </li>
           <li>
-            <a href="#">Контакты</a>
+            <a href="#" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
       <!-- header contact-->
-      <ul>
+      <ul class="contact-nav">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
+      <section class="section">
         <div>
-          <h2>Розробка WEB продуктів</h2>
+          <h2 class="section-title">Розробка WEB продуктів</h2>
           <ul>
             <li>
-              <button type="button">Все</button>
+              <button class="price-button" type="button">Все</button>
             </li>
             <li>
-              <button type="button">Веб-сайты</button>
+              <button class="price-button" type="button">Веб-сайты</button>
             </li>
             <li>
-              <button type="button">Приложения</button>
+              <button class="price-button" type="button">Приложения</button>
             </li>
             <li>
-              <button type="button">Дизайн</button>
+              <button class="price-button" type="button">Дизайн</button>
             </li>
             <li>
-              <button type="button">Маркетинг</button>
+              <button class="price-button" type="button">Маркетинг</button>
             </li>
           </ul>
         </div>
@@ -105,9 +106,11 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html">
+        <span class="first-footer-logo">Web</span>Studio
+      </a>
+      <address class="adress-footer">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
           <li>
