--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body class="page">
     <header class="page-header">
       <!-- header nav -->
-      <nav>
+      <nav class="nav">
         <a class="nav-logo" href="./index.html"> <span class="first-nav-logo">Web</span>Studio </a>
         <ul class="site-nav">
           <li>
@@ -38,7 +38,7 @@
     <!-- main -->
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
         <button type="button" class="hero-button">Заказать услугу</button>
       </section>
       <section class="section">
@@ -46,23 +46,27 @@
         <ul class="feature-list">
           <li>
             <h3 class="title">Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <p class="description">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
             <h3 class="title">Пунктуальность</h3>
-            <p>
+            <p class="description">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="title">Планирование</h3>
-            <p>
+            <p class="description">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="title">Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <p class="description">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
@@ -86,22 +90,22 @@
           <li>
             <img src="./images/team/img.jpg" alt="Игорь Демьяненко" width="270" />
             <h3 class="title">Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p class="position">Product Designer</p>
           </li>
           <li>
             <img src="./images/team/img(1).jpg" alt="Ольга Репина" width="270" />
             <h3 class="title">Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p class="position">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team/img(2).jpg" alt="Николай Тарасов" width="270" />
             <h3 class="title">Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p class="position">Marketing</p>
           </li>
           <li>
             <img src="./images/team/img(3).jpg" alt="Михаил Ермаков" width="270" />
             <h3 class="title">Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p class="position">UI Designer</p>
           </li>
         </ul>
       </section>
