--- a/portfolio.html
+++ b/portfolio.html
@@ -57,50 +57,50 @@
             </li>
           </ul>
         </div>
-        <ul>
+        <ul class="work-list">
           <li>
             <img src="./images/portfolio/portf1.jpg" alt="Веб-сайт" width="370" />
-            <h3>Технокряк</h3>
+            <h3 class="title">Технокряк</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
             <img src="./images/portfolio/portf2.jpg" alt="Постер" width="370" />
-            <h3>Постер New Orlean vs Golden Star</h3>
+            <h3 class="title">Постер New Orlean vs Golden Star</h3>
             <p>Дизайн</p>
           </li>
           <li>
             <img src="./images/portfolio/portf3.jpg" alt="Seafood" width="370" />
-            <h3>Ресторан Seafood</h3>
+            <h3 class="title">Ресторан Seafood</h3>
             <p>Приложение</p>
           </li>
           <li>
             <img src="./images/portfolio/portf4.jpg" alt="Prime" width="370" />
-            <h3>Проект Prime</h3>
+            <h3 class="title">Проект Prime</h3>
             <p>Маркетинг</p>
           </li>
           <li>
             <img src="./images/portfolio/portf5.jpg" alt="Boxes" width="370" />
-            <h3>Проект Boxes</h3>
+            <h3 class="title">Проект Boxes</h3>
             <p>Приложение</p>
           </li>
           <li>
             <img src="./images/portfolio/portf6.jpg" alt="Borders" width="370" />
-            <h3>Inspiration has no Borders</h3>
+            <h3 class="title">Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
             <img src="./images/portfolio/portf7.jpg" alt="Limited Edition" width="370" />
-            <h3>Издание Limited Edition</h3>
+            <h3 class="title">Издание Limited Edition</h3>
             <p>Дизайн</p>
           </li>
           <li>
             <img src="./images/portfolio/portf8.jpg" alt="LAB" width="370" />
-            <h3>Проект LAB</h3>
+            <h3 class="title">Проект LAB</h3>
             <p>Маркетинг</p>
           </li>
           <li>
             <img src="./images/portfolio/portf9.jpg" alt="Business" width="370" />
-            <h3>Growing Business</h3>
+            <h3 class="title">Growing Business</h3>
             <p>Приложение</p>
           </li>
         </ul>
